PLS-18129 LPI scoring : unexpected rating value